# modbot

./: README.md  modbot.cabal  modbot.conf.example
src/: Main.hs
