name: modbot
description: ModBot inspects the open edit queue and attempts to merge/reject edits appropriately
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: 2012 MetaBrainz Foundation
author: MetaBrainz Foundation

Executable modbot
  default-language: Haskell2010
  hs-source-dirs: src
  Main-is: Main.hs
  build-depends:
    base >= 4.5 && < 4.7,
    configurator >= 0.1 && < 0.3,
    hslogger >= 1.2.1,
    musicbrainz-data >= 0.0.1 && < 0.1,
    postgresql-simple >= 0.2.4.1 && < 0.3,
    transformers >= 0.3 && < 0.4
